Agregue experiencia y formacion, y cambie estilos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="css/title.css">
         <link rel="stylesheet" href="css/skillsHobbies.css">
         <link rel="stylesheet" href="css/about.css">
+        <link rel="stylesheet" href="css/formacion.css">
+        <link rel="stylesheet" href="css/experiencia.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
     </head>
@@ -24,11 +26,11 @@
                 
                 <nav class="menu__navegacion">
                     <ul class="menu__navegacion__list">
-                        <li class="menu__enlace"><a href="#">Sobre mi</a></li>
-                        <li class="menu__enlace"><a href="#">Skills</a></li>
-                        <li class="menu__enlace"><a href="#">Hobbies</a></li>
-                        <li class="menu__enlace"><a href="#">Formación</a></li>
-                        <li class="menu__enlace"><a href="#">Proyectos</a></li>
+                        <li class="menu__enlace"><a href="#about">Sobre mi</a></li>
+                        <li class="menu__enlace"><a href="#skills">Skills</a></li>
+                        <li class="menu__enlace"><a href="#hobbies">Hobbies</a></li>
+                        <li class="menu__enlace"><a href="#formacion">Formación</a></li>
+                        <li class="menu__enlace"><a href="#experiencia">Proyectos</a></li>
                         <li class="menu__enlace"><a href="#">Contacto</a></li>
                     </ul>
                 </nav>
@@ -42,7 +44,7 @@
                         <h2 class="title__titulo">Hola soy Sofia Britos y soy desarrolladora web trainee</h2>
                         <p class="title_texto">Soy formada en UTN-FRC y actualmente estoy participando del programa ONE en Alura Latam</p>
                         <ul class="title__list">
-                            <li class="title__list-items"><a href="#">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://github.com/Sofii01">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                             <li class="title__list-items"><a href="#">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                             <li class="title__list-items"><a href="#">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                             <li class="title__list-items"><a href="#">Curriculum</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
@@ -139,6 +141,78 @@
                         </ul>
                     </div>
                 </div>
+            </section>
+
+            <section class="formacion">
+                <h2 class="formacion__titulo">Formación Academica</h2>
+                <div class="formacion__contenido">
+                    <div class="formacion__contenido-box">
+                        <ul class="formacion__contenido-list">
+                            <li ><img src="img/utn.PNG" alt="logo de utn" class="formacion__contenido-item-img"></li>
+                            <li class="formacion__contenido-item-title">
+                                <h4>Ing. en Sistemas</h4>
+                            </li>
+                            <li class="formacion__contenido-item-subtitle">
+                                <p>En Curso | UTN-FRC </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="formacion__contenido-box">
+                        <ul class="formacion__contenido-list">
+                            <li><img src="img/alura_logo.png" alt="logo alura" class="formacion__contenido-item-img"></li>
+                            <li  class="formacion__contenido-item-title">
+                                <h4>Desarrollador Full-Stack Java</h4>
+                            </li>
+                            <li class="formacion__contenido-item-subtitle">
+                                <p>En Curso | Alura & ONE</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="experiencia">
+                <h2 class="experiencia__title">Experiencia Profesional</h2>
+                <div class="experiencia__box">
+                    <img src="img/codificador.PNG" alt="imagen del codificador" class="experiencia__img">
+                    <div class="experiencia__info">
+                        <h2 class="experiencia__subtitle">Encriptador de texto</h2>
+                        <h3 class="experiencia__text">Se puede encriptar y desencriptar un texto. Utilice HTML, CSS Y Javascript</h3>
+                        <div class="experiencia__descrip">
+                            <span class="experiencia__repo">
+                                <a href="https://github.com/Sofii01/ChallengeOneCodificador">
+                                    <button class="experiencia__boton-repo">Repositorio</button>
+                                </a>
+                            </span>
+                            <span class="experiencia__demo">
+                                <a href="https://sofii01.github.io/ChallengeOneCodificador/">
+                                    <button class="experiencia__boton-demo">Ver demo</button>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="experiencia__box">
+                    <img src="img/ahorcado.PNG" alt="imagen del ahorcado" class="experiencia__img">
+                    <div class="experiencia__info">
+                        <h2 class="experiencia__subtitle">Juego Ahorcado</h2>
+                        <h3 class="experiencia__text">Se juega para encontrar la palabra secreta con una cantidad limitada de intentos. Utilice en este challenge HTML, CSS Y Javascript</h3>
+                        <div class="experiencia__descrip">
+                            <span class="experiencia__repo">
+                                <a href="https://github.com/Sofii01/ChallengeJuegoAhorcado">
+                                    <button class="experiencia__boton-repo">Repositorio</button>
+                                </a>
+                            </span>
+                            <span class="experiencia__demo">
+                                <a href="https://sofii01.github.io/ChallengeJuegoAhorcado/">
+                                    <button class="experiencia__boton-demo">Ver demo</button>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                
             </section>
         </div>
 
