modifique css y html descripciones

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
         <link rel="stylesheet" href="css/bases.css">
         <link rel="stylesheet" href="css/head.css">
-        <link rel="stylesheet" href="css/title.css">
+        <link rel="stylesheet" href="css/titleAbout.css">
         <link rel="stylesheet" href="css/skillsHobbies.css">
-        <link rel="stylesheet" href="css/about.css">
         <link rel="stylesheet" href="css/formacion.css">
         <link rel="stylesheet" href="css/experiencia.css">
         <link rel="stylesheet" href="css/contacto.css">
@@ -45,12 +44,12 @@
                 <div class="title_div">
                     <img src="img/imgPerfil.png" alt="imagen de perfil" class="title__imagen">
                     <div class="title__contenido">
-                        <h2 class="title__titulo">Hola soy Sofia Britos y soy desarrolladora web trainee</h2>
-                        <p class="title_texto">Soy formada en UTN-FRC y actualmente estoy participando del programa ONE en Alura Latam</p>
+                        <h2 class="title__titulo">Hola! Soy Sofia Britos y soy desarrolladora web trainee</h2>
+                        <p class="title_texto">Me considero una persona comprometida, proactiva, entusiasta y con ganas de seguir aprendiendo. Actualmente estoy participando del programa ONE en Alura Latam</p>
                         <ul class="title__list">
                             <li class="title__list-items"><a href="https://github.com/Sofii01">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="#">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="#">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://www.instagram.com/sofiiibritos/">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                             <li class="title__list-items"><a href="#">Curriculum</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                         </ul>
                     </div>
@@ -59,8 +58,8 @@
 
             <section class="about" id="about">
                 <h2 class="about__title">Sobre mi</h2>
-                <p class="about__descripcion">Me considero una persona comprometida, activa y responsable.</p>
-                <p class="about__descripcion">Estudio Ing. en Sistemas, en la Universidad Tecnologica Nacional - Facultad Regional Córdoba </p>
+                <p class="about__descripcion">Tengo 20 años, empece a estudiar programacion en el 2020 con cursos de Java en Platzi, fueron muy buenos y gracias a estos decidi estudiar ingenieria.</p>
+                <p class="about__descripcion">Estudio Ing. en Sistemas, en la Universidad Tecnologica Nacional - Facultad Regional Córdoba. Tambien estudio en el programa ONE y hago cursos de idiomas como ingles y coreano</p>
             </section>
 
             <section class="skills animate__bounceInLeft" id="skills">
