--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width initial-scale-1.0">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Portafolio | Sofia</title>
         <link rel="stylesheet" href="css/reset.css">
 
@@ -47,10 +47,10 @@
                         <h2 class="title__titulo">Hola! Soy Sofia Britos y soy desarrolladora web trainee</h2>
                         <p class="title_texto">Me considero una persona comprometida, proactiva, entusiasta y con ganas de seguir aprendiendo. Actualmente estoy participando del programa ONE en Alura Latam</p>
                         <ul class="title__list">
-                            <li class="title__list-items"><a href="https://github.com/Sofii01">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="https://www.instagram.com/sofiiibritos/">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="#">Curriculum</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://github.com/Sofii01" target="_blank">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/" target="_blank">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://www.instagram.com/sofiiibritos/" target="_blank">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://drive.google.com/file/d/1q8tgL_oQu3sDF9gAkSK7vEfi94Pu--HB/view?usp=sharing" target="_blank">Curriculum</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
                         </ul>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 <p class="about__descripcion">Estudio Ing. en Sistemas, en la Universidad Tecnologica Nacional - Facultad Regional Córdoba. Tambien estudio en el programa ONE y hago cursos de idiomas como ingles y coreano</p>
             </section>
 
-            <section class="skills animate__bounceInLeft" id="skills">
+            <section class="skills" id="skills">
                 <h2 class="skills_titulo">Skills</h2>
                 <div class="skills_line">
                     <div class="skills_box">
@@ -228,7 +228,7 @@
                         <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                         <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con
                             usted lo antes posible. </h3>
-                        <form class="formcontato__form" name="form">
+                        <form class="formcontato__form" name="form" id="formulario">
                             <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
                             <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
                             <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
@@ -248,6 +248,7 @@
             </section>
         </div>
 
+        <script src="js/script.js"></script>
     </main>
 
 
