Modifique vista de mobile, faltan las demas vistas

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             </div>
             <section class="menu">
-                
+                <h3>Sofia Britos</h3>
                 <nav class="menu__navegacion">
                     <ul class="menu__navegacion__list">
                         <li class="menu__enlace"><a href="#about">Sobre mi</a></li>
@@ -86,12 +86,11 @@
                     <img src="img/imgPerfil.png" alt="imagen de perfil" class="title__imagen">
                     <div class="title__contenido">
                         <h2 class="title__titulo">Hola! Soy Sofia Britos y soy desarrolladora web trainee</h2>
-                        <p class="title_texto">Me considero una persona comprometida, proactiva, entusiasta y con ganas de seguir aprendiendo. Actualmente estoy participando del programa ONE en Alura Latam</p>
                         <ul class="title__list">
-                            <li class="title__list-items"><a href="https://github.com/Sofii01" target="_blank">Github</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/" target="_blank">Linkedin</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="https://www.instagram.com/sofiiibritos/" target="_blank">Instagram</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
-                            <li class="title__list-items"><a href="https://drive.google.com/file/d/1q8tgL_oQu3sDF9gAkSK7vEfi94Pu--HB/view?usp=sharing" target="_blank">Curriculum</a><img src="img/flecha.png" alt="icono flecha" class="title__item-imagen"></li>
+                            <li class="title__list-items"><a href="https://github.com/Sofii01" target="_blank">Github</a></li>
+                            <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/" target="_blank">Linkedin</a></li>
+                            <li class="title__list-items"><a href="https://www.instagram.com/sofiiibritos/" target="_blank">Instagram</a></li>
+                            <li class="title__list-items"><a href="https://drive.google.com/file/d/1q8tgL_oQu3sDF9gAkSK7vEfi94Pu--HB/view?usp=sharing" target="_blank">Curriculum</a></li>
                         </ul>
                     </div>
                 </div>
@@ -157,13 +156,13 @@
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/idioma.png" alt="icono Idiomas" class="hobbies_box-imagen"></li>                         
-                            <li>Estudiar Idiomas</li>
+                            <li>Idiomas</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/musica.png" alt="icono musica" class="hobbies_box-imagen"></li>                  
-                            <li>Escuchar música</li>
+                            <li>Música</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
@@ -197,7 +196,7 @@
                                 <h4>Ing. en Sistemas</h4>
                             </li>
                             <li class="formacion__contenido-item-subtitle">
-                                <p>En Curso | UTN-FRC </p>
+                                <p>2021 - En Curso | UTN-FRC </p>
                             </li>
                         </ul>
                     </div>
@@ -208,7 +207,7 @@
                                 <h4>Desarrollador Full-Stack Java</h4>
                             </li>
                             <li class="formacion__contenido-item-subtitle">
-                                <p>En Curso | Alura & ONE</p>
+                                <p>Finalizado Octubre 2022 | Alura & ONE</p>
                             </li>
                         </ul>
                     </div>
@@ -223,14 +222,14 @@
                         <h2 class="experiencia__subtitle">Encriptador de texto</h2>
                         <h3 class="experiencia__text">Se puede encriptar y desencriptar un texto. Utilice HTML, CSS Y Javascript</h3>
                         <div class="experiencia__descrip">
-                            <span class="experiencia__repo">
+                            <span class="experiencia__buttons">
                                 <a href="https://github.com/Sofii01/ChallengeOneCodificador">
-                                    <button class="experiencia__boton-repo">Repositorio</button>
+                                    <button class="experiencia__button">Repositorio</button>
                                 </a>
-                            </span>
-                            <span class="experiencia__demo">
+                            </span>    
+                            <span class="experiencia__buttons">
                                 <a href="https://sofii01.github.io/ChallengeOneCodificador/">
-                                    <button class="experiencia__boton-demo">Ver demo</button>
+                                    <button class="experiencia__button">Demo</button>
                                 </a>
                             </span>
                         </div>
@@ -243,14 +242,14 @@
                         <h2 class="experiencia__subtitle">Juego Ahorcado</h2>
                         <h3 class="experiencia__text">Se juega para encontrar la palabra secreta con una cantidad limitada de intentos. Utilice en este challenge HTML, CSS Y Javascript</h3>
                         <div class="experiencia__descrip">
-                            <span class="experiencia__repo">
+                            <span class="experiencia__buttons">
                                 <a href="https://github.com/Sofii01/ChallengeJuegoAhorcado">
-                                    <button class="experiencia__boton-repo">Repositorio</button>
+                                    <button class="experiencia__button">Repositorio</button>
                                 </a>
                             </span>
-                            <span class="experiencia__demo">
+                            <span class="experiencia__buttons">
                                 <a href="https://sofii01.github.io/ChallengeJuegoAhorcado/">
-                                    <button class="experiencia__boton-demo">Ver demo</button>
+                                    <button class="experiencia__button">Demo</button>
                                 </a>
                             </span>
                         </div>
@@ -261,9 +260,6 @@
 
             <section class="formcontato" id="contacto">
                 <div class="formcontato__contacto">
-                    <!-- <div class="formcontato--esquerda">
-                        <img id="formcontato__img" src="img\contact_image.png">
-                    </div> -->
                     <div class="formcontato__text">
                         <h2 class="formcontato__title">Contacto</h2>
                         <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
@@ -275,7 +271,7 @@
                             <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
                             <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje"
                                 placeholder="Mensaje"></textarea>
-                            <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                            <button type="submit" class="formcontato__boton">Enviar mensaje</button>
                         </form>
                     </div>
                 </div>
