--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="title_div">
                     <img src="img/imgPerfil.png" alt="imagen de perfil" class="title__imagen">
                     <div class="title__contenido">
-                        <h2 class="title__titulo">Hola! Soy Sofia Britos y soy desarrolladora web trainee</h2>
+                        <h2 class="title__titulo">Hola! Soy Sofia y soy desarrolladora web trainee</h2>
                         <ul class="title__list">
                             <li class="title__list-items"><a href="https://github.com/Sofii01" target="_blank">Github</a></li>
                             <li class="title__list-items"><a href="https://www.linkedin.com/in/sofia-britos-3201831b1/" target="_blank">Linkedin</a></li>
