Cambios de estilos y modificacion de html, portfolio actualizado

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 
             <section class="about" id="about">
                 <h2 class="about__title">Sobre mi</h2>
-                <p class="about__descripcion">Tengo 20 años, empece a estudiar programacion en el 2020 con cursos de Java en Platzi, fueron muy buenos y gracias a estos decidi estudiar ingenieria.</p>
-                <p class="about__descripcion">Estudio Ing. en Sistemas, en la Universidad Tecnologica Nacional - Facultad Regional Córdoba. Tambien estudio en el programa ONE y hago cursos de idiomas como ingles y coreano</p>
+                <p class="about__descripcion">Tengo 21 años, empece a estudiar programacion en el 2020 con cursos de Java en Platzi.</p>
+                <p class="about__descripcion">Empece a estudiar Ingeniería en Sistemas en el 2021, en la Universidad Tecnologica Nacional - Facultad Regional Córdoba. Finalice en Octubre de 2022, el programa ONE de Desarrollador Full-Stack Java y realice el 3er año de Coreano en la Facultad de Leguas de la UNC</p>
+                <p class="about__descripcion">Considero que soy una persona compremetida, constate y persistente. Me gusta estudiar idiomas como Italiano, Ingles y Coreano</p>
             </section>
 
             <section class="skills" id="skills">
@@ -108,37 +109,37 @@
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/html.png" alt="icono de html" class="skills__box-imagen"></li>
-                            <li>HTML</li>                          
+                            <li class="skills__box-text">HTML</li>                          
                         </ul>
                     </div>
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/css.png" alt="icono de css" class="skills__box-imagen"></li>
-                            <li>CSS</li>                     
+                            <li class="skills__box-text">CSS</li>                     
                         </ul>
                     </div>
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/javascript.png" alt="icono de javascript" class="skills__box-imagen"></li>
-                            <li>JavaScript</li>                        
+                            <li class="skills__box-text">JavaScript</li>                        
                         </ul>
                     </div>
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/python.png" alt="icono de Python" class="skills__box-imagen"></li>
-                            <li>Python</li>                         
+                            <li class="skills__box-text">Python</li>                         
                         </ul>
                     </div>
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/java.png" alt="icono de java" class="skills__box-imagen"></li>
-                            <li>Java</li>                         
+                            <li class="skills__box-text">Java</li>                         
                         </ul>
                     </div>
                     <div class="skills_box">
                         <ul>
                             <li><img src="img/git.png" alt="icono de git" class="skills__box-imagen"></li>
-                            <li>Git-github</li>
+                            <li class="skills__box-text">Git-github</li>
                         </ul>
                     </div>
                 </div>
@@ -150,37 +151,44 @@
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/series.png" alt="icono tv" class="hobbies_box-imagen"></li>
-                            <li>Ver series</li>
+                            <li class="hobbies_box-text">Ver series</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/idioma.png" alt="icono Idiomas" class="hobbies_box-imagen"></li>                         
-                            <li>Idiomas</li>
+                            <li class="hobbies_box-text">Idiomas</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/musica.png" alt="icono musica" class="hobbies_box-imagen"></li>                  
-                            <li>Música</li>
+                            <li class="hobbies_box-text">Música</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/arqueria.png" alt="icono arqueria" class="hobbies_box-imagen"></li>
-                            <li>Arquería</li>
+                            <li class="hobbies_box-text">Arquería</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/leer.png" alt="icono libro" class="hobbies_box-imagen"></li>
-                            <li>Leer</li>
+                            <li class="hobbies_box-text">Leer</li>
                         </ul>
                     </div>
                     <div class="hobbies_box">
                         <ul>
                             <li><img src="img/salir.png" alt="icono amigos" class="hobbies_box-imagen"></li>
-                            <li>Salir</li>
+                            <li class="hobbies_box-text">Salir</li>
+                        </ul>
+                    </div>
+
+                    <div class="hobbies_box">
+                        <ul>
+                            <li><img src="img/manejo-de-pelota.png" alt="icono voley" class="hobbies_box-imagen"></li>
+                            <li class="hobbies_box-text">Voley</li>
                         </ul>
                     </div>
                 </div>
@@ -191,7 +199,7 @@
                 <div class="formacion__contenido">
                     <div class="formacion__contenido-box">
                         <ul class="formacion__contenido-list">
-                            <li ><img src="img/utn.PNG" alt="logo de utn" class="formacion__contenido-item-img"></li>
+                            <li ><img src="img/logo-utn.png" alt="logo de utn" class="formacion__contenido-item-img"></li>
                             <li class="formacion__contenido-item-title">
                                 <h4>Ing. en Sistemas</h4>
                             </li>
@@ -202,12 +210,23 @@
                     </div>
                     <div class="formacion__contenido-box">
                         <ul class="formacion__contenido-list">
-                            <li><img src="img/alura_logo.png" alt="logo alura" class="formacion__contenido-item-img"></li>
+                            <li><img src="img/logoAlura.png" alt="logo alura" class="formacion__contenido-item-img"></li>
                             <li  class="formacion__contenido-item-title">
                                 <h4>Desarrollador Full-Stack Java</h4>
                             </li>
                             <li class="formacion__contenido-item-subtitle">
-                                <p>Finalizado Octubre 2022 | Alura & ONE</p>
+                                <p>Octubre 2022 | Alura & ONE</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="formacion__contenido-box">
+                        <ul class="formacion__contenido-list">
+                            <li><img src="img/unc.png" alt="logo unc" class="formacion__contenido-item-img"></li>
+                            <li  class="formacion__contenido-item-title">
+                                <h4>Idiomas</h4>
+                            </li>
+                            <li class="formacion__contenido-item-subtitle">
+                                <p>Facultad de lenguas -3er año Coreano 2022</p>
                             </li>
                         </ul>
                     </div>
@@ -215,7 +234,7 @@
             </section>
 
             <section class="experiencia" id="experiencia">
-                <h2 class="experiencia__title">Experiencia Profesional</h2>
+                <h2 class="experiencia__title">Proyectos</h2>
                 <div class="experiencia__box">
                     <img src="img/codificador.PNG" alt="imagen del codificador" class="experiencia__img">
                     <div class="experiencia__info">
@@ -255,7 +274,63 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="experiencia__box">
+                    <img src="img/todo_app.PNG" alt="imagen del todo_app" class="experiencia__img">
+                    <div class="experiencia__info">
+                        <h2 class="experiencia__subtitle">TO DO App</h2>
+                        <h3 class="experiencia__text">Una app para hacer una TaskList. Utilice html, css y javascript. Fue un proyecto realizado junto con el curso</h3>
+                        <div class="experiencia__descrip">
+                            <span class="experiencia__buttons">
+                                <a href="https://github.com/Sofii01/ManipulacionDOMalura">
+                                    <button class="experiencia__button">Repositorio</button>
+                                </a>
+                            </span>    
+                            <span class="experiencia__buttons">
+                                <a href="https://sofii01.github.io/ManipulacionDOMalura/">
+                                    <button class="experiencia__button">Demo</button>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="experiencia__box">
+                    <img src="img/DoguitoPetshop.PNG" alt="imagen del DoguitoPetshop" class="experiencia__img">
+                    <div class="experiencia__info">
+                        <h2 class="experiencia__subtitle">Doguito PetShop</h2>
+                        <h3 class="experiencia__text">Se puede registrar, actualizar y eliminar un registro. Utilice html, css y javascript. Fue un proyecto realizado junto con el curso</h3>
+                        <div class="experiencia__descrip">
+                            <span class="experiencia__buttons">
+                                <a href="hhttps://github.com/Sofii01/Doguito-Petshop">
+                                    <button class="experiencia__button">Repositorio</button>
+                                </a>
+                            </span>    
+                            <span class="experiencia__buttons">
+                                <a href="https://sofii01.github.io/Doguito-Petshop/">
+                                    <button class="experiencia__button">Demo</button>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="experiencia__box">
+                    <img src="img/conversor de moneda.png" alt="imagen del conversor de moneda" class="experiencia__img">
+                    <div class="experiencia__info">
+                        <h2 class="experiencia__subtitle">Conversor de moneda</h2>
+                        <h3 class="experiencia__text">Puede convertir de varias monedas a otras. Utilice Java para desarrollarlo y es un proyecto propuesto por el curso de Alura</h3>
+                        <div class="experiencia__descrip">
+                            <span class="experiencia__buttons">
+                                <a href="https://github.com/Sofii01/ConversorMonedaChallenge">
+                                    <button class="experiencia__button">Repositorio</button>
+                                </a>
+                            </span>    
+                            <span class="experiencia__buttons">
+                                <a href="https://sofii01.github.io/ChallengeOneCodificador/">
+                                    <button class="experiencia__button">Demo</button>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="formcontato" id="contacto">
